--- a/Cap02/Teste.ipynb
+++ b/Cap02/Teste.ipynb
@@ -40,9 +40,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13d5f998",
+   "metadata": {},
+   "source": [
+    "Gere um codigo Py com numeros entre 1 e 100 e imprima somente os numeros pares que possam ser divididos por 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "114f558b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeros = list(range(1, 101))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a3e6ff65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(numeros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "10b14294",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "8\n",
+      "12\n",
+      "16\n",
+      "20\n",
+      "24\n",
+      "28\n",
+      "32\n",
+      "36\n",
+      "40\n",
+      "44\n",
+      "48\n",
+      "52\n",
+      "56\n",
+      "60\n",
+      "64\n",
+      "68\n",
+      "72\n",
+      "76\n",
+      "80\n",
+      "84\n",
+      "88\n",
+      "92\n",
+      "96\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = list(range(1, 101))\n",
+    "\n",
+    "pares_div4 = [num for num in numeros if num % 2 == 0 and num % 4 == 0]\n",
+    "\n",
+    "for num in pares_div4:\n",
+    "    print(num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6ffde73f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 8, 12, 16, 20, 24, 28, 32, 36, 40, 44, 48, 52, 56, 60, 64, 68, 72, 76, 80, 84, 88, 92, 96, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = list(range(1,101))\n",
+    "\n",
+    "pares_div4 = [numero for numero in numeros if numero % 2 == 0 and numero % 4 == 0]\n",
+    "\n",
+    "print(pares_div4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e166454",
    "metadata": {},
    "outputs": [],
    "source": []
