--- a/Cap05/Exercicios/Exercicios Concluídos.ipynb
+++ b/Cap05/Exercicios/Exercicios Concluídos.ipynb
@@ -39,59 +39,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 1 - Crie uma função que imprima a sequência de números pares entre 1 e 20 (a função não recebe parâmetro) \n",
-    "# e depois faça uma chamada à função para listar os números      "
+    "# e depois faça uma chamada à função para listar os números     \n",
+    "\n",
+    "def imprimeNumerosPares():\n",
+    "    for i in range(2,21,2):\n",
+    "        print(i)\n",
+    "\n",
+    "imprimeNumerosPares()    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VITOR\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 2 - Crie uam função que receba uma string como argumento e retorne a mesma string em letras maiúsculas.\n",
-    "# Faça uma chamada à função, passando como parâmetro uma string"
+    "# Faça uma chamada à função, passando como parâmetro uma string\n",
+    "\n",
+    "def upper(text):\n",
+    "    text = text.upper()\n",
+    "    print(text)\n",
+    "    \n",
+    "upper('vitor')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n",
+      "['Melancia', 'Uva', 'Laranja', 'Pessego', 'Pera', 'Maça']\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 3 - Crie uma função que receba como parâmetro uma lista de 4 elementos, adicione 2 elementos a lista e \n",
-    "# imprima a lista"
+    "# imprima a lista\n",
+    "\n",
+    "def addList(lista):\n",
+    "    print(lista.append('Pera'))\n",
+    "    print(lista.append('Maça'))\n",
+    "\n",
+    "lista1 = ['Melancia','Uva', 'Laranja', 'Pessego']\n",
+    "addList(lista1)\n",
+    "print(lista1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O parametro passado foi:  Supino\n",
+      "\n",
+      "O parametro passado foi:  Supino\n",
+      "O parametro passado foi:  Rosca\n",
+      "O parametro passado foi:  Polia\n",
+      "O parametro passado foi:  Leg Press\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 4 - Crie uma função que receba um argumento formal e uma possível lista de elementos. Faça duas chamadas \n",
-    "# à função, com apenas 1 elemento e na segunda chamada com 4 elementos"
+    "# à função, com apenas 1 elemento e na segunda chamada com 4 elementos\n",
+    "\n",
+    "def varTuple(arg1, *arg2):\n",
+    "    print('O parametro passado foi: ', arg1)\n",
+    "    for arg in arg2:\n",
+    "        print('O parametro passado foi: ', arg)\n",
+    "    return;\n",
+    "\n",
+    "varTuple('Supino\\n')\n",
+    "\n",
+    "varTuple('Supino','Rosca','Polia','Leg Press')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercício 5 - Crie uma função anônima e atribua seu retorno a uma variável chamada soma. A expressão vai receber 2 \n",
-    "# números como parâmetro e retornar a soma deles"
+    "# números como parâmetro e retornar a soma deles\n",
+    "\n",
+    "soma = lambda num1,num2: num1 + num2\n",
+    "\n",
+    "soma(5,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dentro da função o total é:  30\n",
+      "Fora da função o total é:  0\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 6 - Execute o código abaixo e certifique-se que compreende a diferença entre variável global e local\n",
     "total = 0\n",
@@ -107,9 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[102.56, 97.7, 99.14, 100.03999999999999]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 7 - Abaixo você encontra uma lista com temperaturas em graus Celsius\n",
     "# Crie uma função anônima que converta cada temperatura para Fahrenheit\n",
@@ -117,15 +227,26 @@
     "# (que será estudada no próximo capítulo). Isso permite aplicar sua função a cada elemento da lista\n",
     "# Como descobrir a fórmula matemática que converte de Celsius para Fahrenheit? Pesquise!!!\n",
     "Celsius = [39.2, 36.5, 37.3, 37.8]\n",
-    "Fahrenheit = map(coloque_aqui_sua_função_lambda)\n",
+    "Fahrenheit = map(lambda x: 1.8 * x + 32, Celsius) # rever map e lógica\n",
     "print (list(Fahrenheit))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Exercício 8 - Crie uma list comprehension que imprima o quadrado dos números de 1 a 10\n",
     "[x**2 for x in range(1,11)]"
@@ -133,21 +254,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['maça', 'banana']\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercício 9 - Crie uma list comprehension que imprima as palavras com a letra a no nome\n",
-    "palavras = [\"maça\", \"coiote\", \"banana\", \"terreno\", \"Python\"]\n"
+    "palavras = [\"maça\", \"coiote\", \"banana\", \"terreno\", \"Python\"]\n",
+    "\n",
+    "list_comprehension = [x for x in palavras if 'a' in x] # rever list comprehension\n",
+    "print(list_comprehension)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercício 10 - Crie uma list comprehension que imprima os números menores que 5 em um intervalo de 1 a 10\n"
+    "# Exercício 10 - Crie uma list comprehension que imprima os números menores que 5 em um intervalo de 1 a 10\n",
+    "[x for x in range(1,10) if x < 5]"
    ]
   },
   {
