aprimorando metodos da manipulaçao de arquivos.

--- a/Cap06/Untitled.ipynb
+++ b/Cap06/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2df75310",
+   "id": "e54ae86b",
    "metadata": {},
    "source": [
     "# DSA Manipulação de Arquivos"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "75157cfd",
+   "id": "184863f3",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4eaf44c",
+   "id": "ef58aced",
    "metadata": {},
    "source": [
     "## Manipulando .txt"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "26eae984",
+   "id": "e5520ec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f0e9432",
+   "id": "c0aca1ed",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "43650362",
+   "id": "9d97e9e6",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "38f6e809",
+   "id": "35fcb2fd",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "26bbc43e",
+   "id": "13bb8bad",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fb75312d",
+   "id": "7adc5fca",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cc080bc",
+   "id": "2bb41cce",
    "metadata": {},
    "source": [
     "## Gravando arquivos"
@@ -154,11 +154,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "056d5481",
+   "execution_count": 9,
+   "id": "929fe60c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# abrindo arquivo para gravação\n",
+    "arq2 = open(\"arquivos/arquivo2.txt\", \"w\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "56b2a0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnsupportedOperation",
+     "evalue": "not readable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnsupportedOperation\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_4404\\2450708930.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# arquivo aberto com o parametro \"w\", sendo assim não é possivel ler só escrever\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marq2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mUnsupportedOperation\u001b[0m: not readable"
+     ]
+    }
+   ],
+   "source": [
+    "# arquivo aberto com o parametro \"w\", sendo assim não é possivel ler só escrever\n",
+    "print(arq2.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "09aa9bad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# gravando arquivo\n",
+    "arq2.write(\"Aprendendo a programar em Python.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "283d0565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arq2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "efcc18fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# abrindo arquivo para leitura\n",
+    "arq2 = open(\"arquivos/arquivo2.txt\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ba02a2e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aprendendo a programar em Python.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arq2.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d019023b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# acrescentando conteudo\n",
+    "arq2 = open(\"arquivos/arquivo2.txt\", \"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6915c95a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arq2.write(\" E a metodologia de ensino da Data Science Academy facilita o aprendizado\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eb3fbba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arq"
+   ]
   }
  ],
  "metadata": {
