Seguimos evoluindo em manipulação de arquivos em python

--- a/Cap06/Manipulando Arquivos.ipynb
+++ b/Cap06/Manipulando Arquivos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e54ae86b",
+   "id": "6346e475",
    "metadata": {},
    "source": [
     "# DSA Manipulação de Arquivos"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "184863f3",
+   "id": "72ab93fb",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef58aced",
+   "id": "6a7bc094",
    "metadata": {},
    "source": [
     "## Manipulando .txt"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e5520ec0",
+   "id": "3bf60c7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0aca1ed",
+   "id": "e8d25d5e",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9d97e9e6",
+   "id": "b1052dbd",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "35fcb2fd",
+   "id": "d7b2cbaa",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "13bb8bad",
+   "id": "8804ce9f",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7adc5fca",
+   "id": "7fde0037",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb41cce",
+   "id": "d054be9b",
    "metadata": {},
    "source": [
     "## Gravando arquivos"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "929fe60c",
+   "id": "787e3a92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "56b2a0e4",
+   "id": "4e5f2db4",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "09aa9bad",
+   "id": "80482e93",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "283d0565",
+   "id": "a5d6173c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "efcc18fd",
+   "id": "a41052e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ba02a2e5",
+   "id": "b6e84d99",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d019023b",
+   "id": "0e4187ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6915c95a",
+   "id": "4d025d5d",
    "metadata": {},
    "outputs": [
     {
@@ -281,13 +281,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8eb3fbba",
+   "execution_count": 17,
+   "id": "f7e6b0bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arq"
+    "arq2.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f4409814",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arq2 = open(\"arquivos/arquivo2.txt\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9202c7d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aprendendo a programar em Python. E a metodologia de ensino da Data Science Academy facilita o aprendizado\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arq2.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d3a54c01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# retornando no inicio\n",
+    "print(arq2.seek(0,0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0001729d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aprendendo a programar em Python. E a metodologia de ensino da Data Science Academy facilita o aprendizado\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arq2.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fed3393",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
