Usando expressão with

--- a/Cap06/Manipulando Arquivos Pt2.ipynb
+++ b/Cap06/Manipulando Arquivos Pt2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "82cf6cc7",
+   "id": "40022e96",
    "metadata": {},
    "source": [
     "# DSA Manipulando Arquivos - Pt 2"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4f722516",
+   "id": "0a28160c",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdca8218",
+   "id": "eb80510e",
    "metadata": {},
    "source": [
     "## Manipulando Arquivos TXT\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "937c851c",
+   "id": "90861721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1590a156",
+   "id": "df78ad4e",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "de723b0c",
+   "id": "b7f9f391",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0d4439a7",
+   "execution_count": 5,
+   "id": "1efb1a4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8b36ed03",
+   "execution_count": 6,
+   "id": "a25be16b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "50ebb323",
+   "execution_count": 7,
+   "id": "0eb1fadb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "19c55259",
+   "execution_count": 8,
+   "id": "e36b33e3",
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +137,106 @@
     "\n",
     "print(conteudo)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3406964",
+   "metadata": {},
+   "source": [
+    "## Usando a expressão with\n",
+    "\n",
+    "O método close() é executado automaticamente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "670ee96c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open ('arquivos/cientista.txt', 'r') as arquivo:\n",
+    "    conteudo = arquivo.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0e244a1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "177\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(conteudo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "34226ae2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cientista de Dados pode ser uma excelente alternativa de carreira. Esses profissionais precisam saber como programar em Python. E, claro, devem ser proficientes em Data Science \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(conteudo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "06b6a849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('arquivos/cientista.txt', 'w') as arquivo:\n",
+    "    arquivo.write(texto[:19])\n",
+    "    arquivo.write('\\n')\n",
+    "    arquivo.write(texto[28:66])# lendo o arquivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a342647f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cientista de Dados \n",
+      "uma excelente alternativa de carreira.\n"
+     ]
+    }
+   ],
+   "source": [
+    "arquivo = open('arquivos/cientista.txt', 'r')\n",
+    "conteudo = arquivo.read()\n",
+    "arquivo.close()\n",
+    "print(conteudo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cffc1ffe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
