importando json, para manipular e criar arquivos json

--- a/Cap06/Manipulando Arquivos Pt2.ipynb
+++ b/Cap06/Manipulando Arquivos Pt2.ipynb
@@ -352,9 +352,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "362875f9",
+   "metadata": {},
+   "source": [
+    "## Manipulando Arquivos JSON (Java Script Object Notation)\n",
+    "\n",
+    "JSON (Java Script Object Notation) é um formato de dados de texto simples e leve que é utilizado para transmitir informações em aplicações web. É baseado em uma estrutura de objetos javascript e usa pares de chave-valor, para representar dados. JSON é facilmente lido e escrito por máquinas e é amplamente utilizado como formato de intercâmbio de dados em aplicações web moderdas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3b61ce1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# criando um dicionario\n",
+    "dict_guido = {'nome':'Guido van Rossum',\n",
+    "              'linguagem':'Python',\n",
+    "              'similiar':['c','Modula-3','list'],\n",
+    "              'users':100000}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5db80a04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nome Guido van Rossum\n",
+      "linguagem Python\n",
+      "similiar ['c', 'Modula-3', 'list']\n",
+      "users 100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k,v in dict_guido.items():\n",
+    "    print(k,v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2ed7cecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importando modulo json\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1f7e20b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"nome\": \"Guido van Rossum\", \"linguagem\": \"Python\", \"similiar\": [\"c\", \"Modula-3\", \"list\"], \"users\": 100000}'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.dumps(dict_guido)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9766f9e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# criando um aruivo Json\n",
+    "with open('arquivos/dados.json','w') as arquivo:\n",
+    "    arquivo.write(json.dumps(dict_guido))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d5bc2dc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# leitura de arquivos json\n",
+    "with open('arquivos/dados.json', 'r') as arquivo:\n",
+    "    texto = arquivo.read()\n",
+    "    dados = json.loads(texto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4128e76e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nome': 'Guido van Rossum',\n",
+       " 'linguagem': 'Python',\n",
+       " 'similiar': ['c', 'Modula-3', 'list'],\n",
+       " 'users': 100000}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d889c493",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guido van Rossum\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dados['nome'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "306c5fce",
+   "id": "6cf51cf0",
    "metadata": {},
    "outputs": [],
    "source": []
