--- a/Cap06/Manipulando Arquivos Pt2.ipynb
+++ b/Cap06/Manipulando Arquivos Pt2.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "362875f9",
+   "id": "b2027f35",
    "metadata": {},
    "source": [
     "## Manipulando Arquivos JSON (Java Script Object Notation)\n",
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3b61ce1b",
+   "id": "98bed864",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5db80a04",
+   "id": "e32bfcd3",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2ed7cecf",
+   "id": "f235235d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1f7e20b8",
+   "id": "c8352ec1",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9766f9e3",
+   "id": "327db2e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d5bc2dc1",
+   "id": "5d89ff83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4128e76e",
+   "id": "02773780",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d889c493",
+   "id": "051d4035",
    "metadata": {},
    "outputs": [
     {
@@ -497,9 +497,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d3684cc",
+   "metadata": {},
+   "source": [
+    "## Extração de Arquivo da Web"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "46de6e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imprimindo um arquivo json copiado da internet\n",
+    "from urllib.request import urlopen\n",
+    "\n",
+    "response = urlopen('http://vimeo.com/api/v2/video/57733101.json').read().decode('utf8')\n",
+    "dados = json.loads(response)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b40b6c47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 57733101,\n",
+       " 'title': 'The Good Man trailer',\n",
+       " 'description': 'Trailer for the Manifesto Films production, The Good Man, now available in UK/Ireland/US/Canada/Australia/New Zealand on iTunes (https://itunes.apple.com/us/movie/the-good-man/id873130906) and DVD (http://www.amazon.co.uk/The-Good-Man-Aiden-Gillen/dp/B00IIK6CGU/). Co-production with Jet Black Entertainment (South Africa). Starring Aidan Gillen, Thabang Sidloyi, Kelly Campbell, Lunathi Mampofu. Written & directed by Phil Harrison. More info at www.thegoodmanfilm.com<br />\\r\\n<br />\\r\\nCheck out the Variety Magazine review here: http://www.variety.com/review/VE1117947909/',\n",
+       " 'url': 'https://vimeo.com/57733101',\n",
+       " 'upload_date': '2013-01-19 04:01:15',\n",
+       " 'thumbnail_small': 'https://i.vimeocdn.com/video/436057121-e828a1f5478ec0136e957753d107f2a1268c64def9b82faac37c8e30c031cff2-d_100x75',\n",
+       " 'thumbnail_medium': 'https://i.vimeocdn.com/video/436057121-e828a1f5478ec0136e957753d107f2a1268c64def9b82faac37c8e30c031cff2-d_200x150',\n",
+       " 'thumbnail_large': 'https://i.vimeocdn.com/video/436057121-e828a1f5478ec0136e957753d107f2a1268c64def9b82faac37c8e30c031cff2-d_640',\n",
+       " 'user_id': 1334563,\n",
+       " 'user_name': 'Manifesto Films',\n",
+       " 'user_url': 'https://vimeo.com/manifestofilms',\n",
+       " 'user_portrait_small': 'https://i.vimeocdn.com/portrait/4778306_30x30',\n",
+       " 'user_portrait_medium': 'https://i.vimeocdn.com/portrait/4778306_75x75',\n",
+       " 'user_portrait_large': 'https://i.vimeocdn.com/portrait/4778306_100x100',\n",
+       " 'user_portrait_huge': 'https://i.vimeocdn.com/portrait/4778306_300x300',\n",
+       " 'stats_number_of_likes': 18,\n",
+       " 'stats_number_of_plays': 6643,\n",
+       " 'stats_number_of_comments': 0,\n",
+       " 'duration': 143,\n",
+       " 'width': 1024,\n",
+       " 'height': 576,\n",
+       " 'tags': 'belfast, cape town, africa, ireland, film',\n",
+       " 'embed_privacy': 'anywhere'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9018af74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Titulo:  The Good Man trailer\n",
+      "URL:  https://vimeo.com/57733101\n",
+      "Duração:  143\n",
+      "Número de Visualizações:  6643\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Titulo: ', dados['title'] )\n",
+    "print('URL: ', dados['url'])\n",
+    "print('Duração: ', dados['duration'])\n",
+    "print('Número de Visualizações: ', dados['stats_number_of_plays'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3225fe51",
+   "metadata": {},
+   "source": [
+    "        Copiando o conteudo de um arquivo para outro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "958b6881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nomes dos arquivos\n",
+    "arquivo_fonte = 'arquivos/dados.json'\n",
+    "arquivo_destino = 'arquivos/dados.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bf6842d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Método 1\n",
+    "with open(arquivo_fonte, 'r') as infile:\n",
+    "    text= infile.read()\n",
+    "    with open(arquivo_destino, 'w') as outfile:\n",
+    "        outfile.write(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b065fa71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "107"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Método 2\n",
+    "open(arquivo_destino, 'w').write(open(arquivo_fonte, 'r').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9ab0bbee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Leitura do arquivo txt\n",
+    "with open('arquivos/dados.txt', 'r') as arquivo:\n",
+    "    texto = arquivo.read()\n",
+    "    dados = json.loads(texto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "acad7585",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nome': 'Guido van Rossum', 'linguagem': 'Python', 'similiar': ['c', 'Modula-3', 'list'], 'users': 100000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dados)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cf51cf0",
+   "id": "a9326815",
    "metadata": {},
    "outputs": [],
    "source": []
